# gfx

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: rect.h  vec2d.h
include/gfx/: color.h  constants.h  font.h  gfx.h  renderer.h  surface.h  texture.h  window.h
src/: gfx.cpp  renderer.cpp
test/: CMakeLists.txt
test/src/: gfx_test.cpp
